fix tabs when content is too short

--- a/client/style/css/custom.css
+++ b/client/style/css/custom.css
@@ -527,7 +527,9 @@ body[data-color="enterprise-dark"].flat #sidebar > ul > li.submenu.open > a{
     box-shadow: 0 2px 6px rgba(0,0,0,0.25);
     border-top: 1px solid #ddd;
     margin: 15px 0px 0px 0px;
+    min-height: 350px;
 }
+
 
 .contactable-nav-tabs-main{
     border-top:1px solid #e7e7e7;
